# typers

./: Cargo.toml  LICENSE  README.md  build.rs  default_config.toml
src/: lib.rs  main.rs
src/modules/: config.rs  mod.rs  sentence_typer.rs
src/modules/sources/: file_source.rs  mod.rs  text_source.rs  wiki_source.rs
