[package]
name = "typers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
reqwest = { version = "0.11.4", features = ["blocking"]}
serde_json = "1.0.93"
any_ascii = "0.3.1"
console = "0.15.5"